--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
         <link href="lib/slick/slick.css" rel="stylesheet">
         <link href="lib/slick/slick-theme.css" rel="stylesheet">
-        <link href="lib/boxicons/css/boxicons.min.css" rel="stylesheet">
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
         <!-- Template Stylesheet -->
         <link href="lib/css/template.css" rel="stylesheet">
