--- a/index.html
+++ b/index.html
@@ -190,11 +190,6 @@
 		<div id="dot_wrap"><span class="dot"></span></div>
 
       
-
-   
-<div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v20.0" nonce="uAjJu8tJ"></script>
- 
  
  
   <!-- Carousel Start -->
@@ -711,11 +706,11 @@ $asepe = "ASEPE est une startup qui vise à promouvoir une image positive de l'e
                                 <p><i class="bx bx-phone"></i>06-832-85-53 /  04-497-00-70  </p>
                                 <p><i class="bx bx-envelope"></i>asepecongo@gmail.com</p>
                                 <div class="footer-social">
-                                    <a href=""><i class="bx bxl-twitter"></i></a>
-                                    <a href=""><i class="bx bxl-facebook"></i></a>
-                                    <a href=""><i class="bx bxl-youtube"></i></a>
-                                    <a href=""><i class="bx bxl-instagram"></i></a>
-                                    <a href=""><i class="bx  bxl-linkedin"></i></a>
+                                    <a href="#"><i class="bx bxl-twitter"></i></a>
+                                    <a href="#"><i class="bx bxl-facebook"></i></a>
+                                    <a href="#"><i class="bx bxl-youtube"></i></a>
+                                    <a href="#"><i class="bx bxl-instagram"></i></a>
+                                    <a href="#"><i class="bx  bxl-linkedin"></i></a>
                                 </div>
  
                             </div>
@@ -772,7 +767,7 @@ $asepe = "ASEPE est une startup qui vise à promouvoir une image positive de l'e
                             <p>&copy;  2024 <a href="#"> Top Cleaning </a> </p>
                         </div>
                         <div class="col-md-6">
-                            <p>Conçu par Franck Tendel </p>
+                            <!--p>Conçu par Franck Tendel </p-->
                         </div>
                     </div>
                 </div>
